Criando interfaces e serviços e estilizando alguns components

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,12 @@
 <nav>
+  <a routerLink="/" class="brand">
+    Moments
+    <h2>Moments</h2>
+  </a>
   <ul>
-    <li>
-      <a routerLink="">Home</a>
+    <li class="links">
+      <a routerLink="/">Home</a>
+      <a routerLink="/moment/new" id="add">Compartilhar</a>
       <a routerLink="/about">Sobre</a>
     </li>
   </ul>
