--- a/src/app/components/moment-form/moment-form.component.html
+++ b/src/app/components/moment-form/moment-form.component.html
@@ -1,17 +1,29 @@
-<form id="form-moment">
+<form id="form-moment" (ngSubmit)="submit()" [formGroup]="momentForm" #formDir="ngForm">
+  <input type="hidden" formControlName="id">
   <div class="form-group">
     <label for="title">Título</label>
-    <input type="text" placeholder="Coloque um título" required>
+    <input 
+      type="text" 
+      placeholder="Coloque um título" 
+      required 
+      formControlName="title"
+    >
+    <div *ngIf="title.invalid && formDir.submitted" class="validation-error">
+      <p *ngIf="title.errors?.['required']">O título é obrigatório</p>
+    </div>
   </div>
 
   <div class="form-group">
     <label for="description">Descrição</label>
-    <textarea placeholder="O que aconteceu lá" required></textarea>
+    <textarea placeholder="O que aconteceu lá" required formControlName="description"></textarea>
+    <div *ngIf="description.invalid && formDir.submitted" class="validation-error">
+      <p *ngIf="description.errors?.['required']">A descrição é obrigatória</p>
+    </div>
   </div>
 
   <div class="form-group">
     <label for="image">Coloque a foto que mais te marcou</label>
-    <input type="file">
+    <input type="file" (change)="onFileSelected($event)">
   </div>
   <input type="submit" value="{{ btnText }}">
 </form>
