--- a/src/app/components/pages/about/about.component.html
+++ b/src/app/components/pages/about/about.component.html
@@ -1,1 +1,5 @@
-<p>About page</p>
+<div class="about">
+  <h2>Sobre Moments</h2>
+  <p>Compartilhe seus momentos, e receba comentários de quem você mais gosta</p>
+  <a routerLink="/moments/new">Quero compartilhar meus momentos</a>
+</div>
